--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
 															<span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js">
 																<span class="gdlr-core-image-overlay-content" >
 																	<span class="gdlr-core-portfolio-title gdlr-core-title-font "  >
-																		<a href="#" >Interior Work AvroKo Project</a>
+																		<a href="#" >Serena nest</a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
 																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/home/1.png" data-lightbox-group="gdlr-core-img-group-2">
@@ -1034,7 +1034,7 @@
 															<span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js">
 																<span class="gdlr-core-image-overlay-content" >
 																	<span class="gdlr-core-portfolio-title gdlr-core-title-font "  >
-																		<a href="#" >The Ark Building Project</a>
+																		<a href="#" >Blue sea villas</a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
 																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/home/2.png" data-lightbox-group="gdlr-core-img-group-2">
@@ -1055,7 +1055,7 @@
 															<span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js">
 																<span class="gdlr-core-image-overlay-content" >
 																	<span class="gdlr-core-portfolio-title gdlr-core-title-font "  >
-																		<a href="#" >Diamond Park Exterior Design</a>
+																		<a href="#" >Aparna serene park</a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
 																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/home/3.png" data-lightbox-group="gdlr-core-img-group-2">
@@ -1076,7 +1076,7 @@
 															<span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js">
 																<span class="gdlr-core-image-overlay-content" >
 																	<span class="gdlr-core-portfolio-title gdlr-core-title-font "  >
-																		<a href="#" >Museum Of Glass Art in London</a>
+																		<a href="#" >Preethi pranav knightwoods</a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
 																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/home/4.png" data-lightbox-group="gdlr-core-img-group-2">
@@ -1097,7 +1097,7 @@
 															<span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js">
 																<span class="gdlr-core-image-overlay-content" >
 																	<span class="gdlr-core-portfolio-title gdlr-core-title-font "  >
-																		<a href="#" >Minimal &#038; Light Living Area</a>
+																		<a href="#" >Avasa</a>
 																	</span>
 																	<span class="gdlr-core-portfolio-icon-wrap">
 																		<a class="gdlr-core-lightgallery gdlr-core-js "  href="upload/home/8.png" data-lightbox-group="gdlr-core-img-group-2">
@@ -1208,7 +1208,7 @@
                                                                 <div class="gdlr-core-testimonial-author-image gdlr-core-media-image"><img src="upload/personnel-2-2-150x150.jpg" alt="" width="150" height="150" title="personnel-2-2" /></div>
                                                                 <div class="gdlr-core-testimonial-author-content">
                                                                     <div class="gdlr-core-testimonial-title gdlr-core-title-font gdlr-core-skin-title" style="color: #ffffff ;">Mahender Alimi</div>
-                                                                    <div class="gdlr-core-testimonial-position gdlr-core-info-font gdlr-core-skin-caption" style="color: #ffffff ;">Managing Directior</div>
+                                                                    <div class="gdlr-core-testimonial-position gdlr-core-info-font gdlr-core-skin-caption" style="color: #ffffff ;">Managing Partner</div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1225,48 +1225,37 @@
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " data-gdlr-animation="fadeInUp" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15 gdlr-core-column-first">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb ">
-                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="345">0</span></div>
+                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="45">0</span></div>
                                                     <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 18px ;">Happy Clients</div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb ">
-                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="934">0</span></div>
+                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="95">0</span></div>
                                                     <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 18px ;">Amazing works</div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
+                             
+                                <div class="gdlr-core-pbf-column gdlr-core-column-20">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb ">
-                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="20">0</span><span class="gdlr-core-counter-item-suffix">+</span></div>
-                                                    <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 18px ;">Awards winning</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-15">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb ">
-                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="16">0</span></div>
+                                                    <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 36px ;"><span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="4000" data-counter-start="0" data-counter-end="3">0</span></div>
                                                     <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 18px ;">operated Years</div>
                                                 </div>
                                             </div>
